--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<input type="text">
 
 	<ul>
-		<li><span id=x>X</span> Buy plants</li>
+		<li><span>X</span> Buy plants</li>
 		<li><span>X</span> Visit Alice</li>
 		<li><span>X</span> Do dishes</li>
 	</ul>
