--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
 	<title>Todo List</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 
 <div id="container">
-	<h1>To-do List</h1>
-	<input type="text">
+	<h1>To-do List<i class="fa fa-plus"></i></h1></h1>
+	<input type="text" placeholder="Add New Todo">
 
 	<ul>
-		<li><span>X</span> Buy plants</li>
-		<li><span>X</span> Visit Alice</li>
-		<li><span>X</span> Do dishes</li>
+		<li><span><i class="fa fa-trash"></i></h1></span> Buy plants</li>
+		<li><span><i class="fa fa-trash"></i></h1></span> Visit Alice</li>
+		<li><span><i class="fa fa-trash"></i></h1></span> Do dishes</li>
 	</ul>
 </div>
 
